--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,9 @@ dependencies {
     compile 'com.blunderer:materialdesignlibrary:2.0.4'
     compile 'com.android.support:support-v4:24.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.google.android.gms:play-services-games:9.4.0'
+    compile project (':BaseGameUtils')
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+
 }
